# Gclock

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/app/: CMakeLists.txt
components/app/client/: client.c
components/app/client/http/: http_client.h
components/app/client/http_client/: http_client.c
components/app/client/ntp/: ntp.c  ntp.h
components/app/infra/: infra.c  infra.h
components/app/infra/power/: power.c  power.h
components/app/server/: server.c
components/app/server/http/: http_server.c  http_server.h
components/app/server/http/service/: file_service.c  get_hello.c  http_service.h  upload_script.html
components/app/server/http_server/: http_server.c
components/client/: CMakeLists.txt  client.c  client.h
components/client/http_req/: http_req.c
components/device/: CMakeLists.txt  board.h  device.c  device.h  pal_driver.c  pal_driver.h
components/device/aht10/: aht10.c  aht10.h
components/device/bat/: battery.c
components/device/bus/: dev_bus.h  i2c_driver.c
components/device/button/: button.c  button.h
components/device/lcd/: dev_lcd.c  dev_lcd.h  lcd.c  lcd.h
components/device/net/: net.h  wifi.c
components/device/power/: power.c  power.h
components/device/storage/: dev_storage.c
components/device/wifi/: wifi.c  wifi.h
components/drivers/: CMakeLists.txt  board.h  driver.c  driver.h  pal.h  pal_dev.h  pal_driver.c  pal_driver.h
components/drivers/aht10/: aht10.c  aht10.h
components/drivers/bat/: battery.c
components/infra/: CMakeLists.txt
components/lv_app/: CMakeLists.txt  lv_app.c  lv_app.h  lv_port.c
components/lv_app/font/: djb_100_font.c  djb_48_font.c  lv_custom_font.h  mod_28_font.c  modenine_100.c  oloron_100.c  railway_24_font.c  robot_24_font.c
components/lv_app/hal/: lv_app_hal.c  lv_app_hal.h
components/lv_app/icon/: clock.c  icons.h  sensor.c
components/lv_app/pagemanager/: node.h  page_manager.c  page_manager.h  page_node.h  pagebase.c  pagebase.h  pm_anim.c  pm_anim.h
components/lv_app/pages/: page.c  page.h  page_2.c  page_3.c  page_bar.c  page_env.c  page_main.c  page_node_main.c  page_node_notice.c  page_node_status_bar.c  page_sound.c  page_time.c  pages.c  pages.h
components/net/: CMakeLists.txt
components/net/client/http_client/: http_client.c  http_client.h
components/net/client/ntp/: ntp.c
components/net/server/: server.h
components/net/server/http_server/: http_server.c  http_server.h
components/pal/: CMakeLists.txt  board.h  pal.c  pal.h  pal_dev.h  pal_driver.c  pal_driver.h
components/pal/aht10/: aht10.c
components/pal/apa102/: apa102.c  apa102.h  dev_led.c  dev_led.h
components/pal/bat/: battery.h
components/pal/bus/: i2c_driver.c
components/pal/knob/: dev_knob.c  dev_knob.h
components/pal/lcd/: dev_lcd.c  dev_lcd.h  lcd.c  lcd.h
components/pal/speaker/: dev_speaker.c  dev_speaker.h
components/pal/storage/: dev_storage.c  dev_storage.h
components/pal/wifi/: wifi.c
components/server/: CMakeLists.txt  server.c
components/util/: CMakeLists.txt  util.c  util.h
main/: CMakeLists.txt  main.c
(+14 files in other folders)
